tests/NormalTests/paczka1/fuzzy1/65668181.err
Error in line 1: eMNEMCz A699 0,2
Error in line 7: aeOHrPQg S787 4,8
Error in line 12: 6aOpIsG9DPQ A699 71,5
Error in line 16: 4sC0RklSY A197 19,4
Error in line 17: 4sC0RklSY S787 23,6
Error in line 21: 4sC0RklSY S53 30,3
Error in line 38: LCD3V A197 47,03
